# diabetes-prediction

./: Dockerfile  README.md  Untitled - Copy.ipynb  diabetes.ipynb  diabetes_final copy.ipynb  diabetes_fixed.ipynb  pre.py  predict.py  pyproject.toml  test.py  train.py  utils.py
.ipynb_checkpoints/: Untitled - Copy-checkpoint.ipynb  diabetes-checkpoint.ipynb  diabetes_final copy-checkpoint.ipynb  diabetes_final-checkpoint.ipynb  diabetes_fixed-checkpoint.ipynb
